# django-ninja

./: .gitignore  DESIGN.md  GEMINI.md  README.md  docker-compose.yml  manage.py  pyproject.toml
apps/dashboard/: api.py  tests.py
apps/dashboard/services/: dashboard_service.py
apps/dashboard/templates/: dashboard.html
apps/users/: api.py  tests.py
apps/users/api/: __init__.py  user.py
apps/users/schemas/: forgot_password_schema.py  login_schema.py  register_schema.py
apps/users/services/: forgot_service.py  login.py  login_service.py  logout_service.py  register_service.py
apps/users/templates/: auth_base.html  forgot_password.html  forgot_password_email.html  login.html  register.html  unauthorized.html
design/dashboard_screen/: code.html
design/forgot_password_screen/: code.html
design/ku_industrial_lab/: DESIGN.md
design/login_page_updated_brand/: code.html
design/register_page_full_screen/: code.html
design/unauthorization_page/: code.html
myproject/: api.py  settings.py  urls.py
precision_plastic_lab/: asgi.py  settings.py  urls.py  wsgi.py
utils/: session_auth.py
utils/templates/: menu_base.html
