[project]
name = "myproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.3",
    "django-extensions>=4.1",
    "django-ninja>=1.6.2",
    "ipython>=9.11.0",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.2",
]
